src/snapshots/funky__tests__if.wasm.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: RefCell {
        value: ModuleInstance {
            start: 0,
            code: [
                FunctionBody {
                    locals: [],
                    code: [],
                },
                FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                [],
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                [],
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                [],
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                [],
                            ),
                        ),
                    ],
                },
                FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                [
                                    Ctrl(
                                        OP_NOP,
                                    ),
                                ],
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF_AND_ELSE(
                                Empty,
                                [
                                    Ctrl(
                                        OP_NOP,
                                    ),
                                ],
                                [
                                    Ctrl(
                                        OP_NOP,
                                    ),
                                ],
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF_AND_ELSE(
                                ValueType(
                                    I32,
                                ),
                                [
                                    Num(
                                        OP_I32_CONST(
                                            7,
                                        ),
                                    ),
                                ],
                                [
                                    Num(
                                        OP_I32_CONST(
                                            8,
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ],
                },
            ],
            fn_types: [
                FunctionSignature {
                    param_types: [],
                    return_types: [],
                },
                FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [],
                },
                FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
            ],
            funcaddrs: [
                0,
                1,
                2,
            ],
            tableaddrs: [],
            memaddrs: [],
            globaladdrs: [],
            exports: [
                ExportInstance {
                    name: "empty",
                    value: Function {
                        ty: 1,
                    },
                },
                ExportInstance {
                    name: "singular",
                    value: Function {
                        ty: 2,
                    },
                },
            ],
        },
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [],
                    code: [],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                [],
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                [],
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                [],
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                [],
                            ),
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                [
                                    Ctrl(
                                        OP_NOP,
                                    ),
                                ],
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF_AND_ELSE(
                                Empty,
                                [
                                    Ctrl(
                                        OP_NOP,
                                    ),
                                ],
                                [
                                    Ctrl(
                                        OP_NOP,
                                    ),
                                ],
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF_AND_ELSE(
                                ValueType(
                                    I32,
                                ),
                                [
                                    Num(
                                        OP_I32_CONST(
                                            7,
                                        ),
                                    ),
                                ],
                                [
                                    Num(
                                        OP_I32_CONST(
                                            8,
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
}
