src/snapshots/funky__tests__if_loop.wasm.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: I32,
                    },
                ],
                code: [
                    Var(
                        OP_LOCAL_GET(
                            0,
                        ),
                    ),
                    Var(
                        OP_LOCAL_GET(
                            0,
                        ),
                    ),
                    Num(
                        OP_I32_MUL,
                    ),
                    Num(
                        OP_I32_CONST(
                            0,
                        ),
                    ),
                    Var(
                        OP_LOCAL_GET(
                            0,
                        ),
                    ),
                    Param(
                        OP_SELECT,
                    ),
                    Var(
                        OP_LOCAL_GET(
                            0,
                        ),
                    ),
                    Ctrl(
                        OP_IF(
                            Empty,
                            CodeBlock {
                                id: 1,
                                instructions: [
                                    Ctrl(
                                        OP_LOOP(
                                            Empty,
                                            CodeBlock {
                                                id: 1,
                                                instructions: [
                                                    Var(
                                                        OP_LOCAL_GET(
                                                            0,
                                                        ),
                                                    ),
                                                    Num(
                                                        OP_I32_CONST(
                                                            -1,
                                                        ),
                                                    ),
                                                    Num(
                                                        OP_I32_ADD,
                                                    ),
                                                    Var(
                                                        OP_LOCAL_TEE(
                                                            0,
                                                        ),
                                                    ),
                                                    Ctrl(
                                                        OP_BR_IF(
                                                            0,
                                                        ),
                                                    ),
                                                ],
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                    ),
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        funcaddrs: [
            0,
        ],
        tableaddrs: [],
        memaddrs: [
            0,
        ],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "memory",
                value: Memory {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "my_loop",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I32,
                        },
                    ],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Num(
                            OP_I32_MUL,
                        ),
                        Num(
                            OP_I32_CONST(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Param(
                            OP_SELECT,
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                CodeBlock {
                                    id: 1,
                                    instructions: [
                                        Ctrl(
                                            OP_LOOP(
                                                Empty,
                                                CodeBlock {
                                                    id: 1,
                                                    instructions: [
                                                        Var(
                                                            OP_LOCAL_GET(
                                                                0,
                                                            ),
                                                        ),
                                                        Num(
                                                            OP_I32_CONST(
                                                                -1,
                                                            ),
                                                        ),
                                                        Num(
                                                            OP_I32_ADD,
                                                        ),
                                                        Var(
                                                            OP_LOCAL_TEE(
                                                                0,
                                                            ),
                                                        ),
                                                        Ctrl(
                                                            OP_BR_IF(
                                                                0,
                                                            ),
                                                        ),
                                                    ],
                                                },
                                            ),
                                        ),
                                    ],
                                },
                            ),
                        ),
                    ],
                },
            },
        ],
        tables: [],
        memory: [
            MemoryInstance {
                data (only length): 1114112,
                max: None,
            },
        ],
        stack: [],
        globals: [],
    },
}
